<resources>
    <string name="app_name">FitnessDial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="header">Set Up Your Profile</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="activity">How active are you?</string>
    <string name="height">Height</string>
    <string name="weight">weight</string>
    <string name="goal">Goal weight</string>

    <string name="cm">cm</string>
    <string name="kg">kg</string>

    <string name="selectDate">Select the dob </string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>

    <string name="choose">Choose</string>
    <string name="submitButton">Next</string>

    <string-array name="activity_arrays">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="food_list">
        <item>Rice</item>
        <item>Banana</item>
        <item>Red Beans</item>
        <item>Milk</item>
        <item>Cereals</item>
        <item>Potato</item>
        <item>Rotti</item>
    </string-array>

    <!--Food home page-->
    <string name="Today">Friday</string>
    <string name="Calorie">1200 Calories left</string>
    <string name="total">1200</string>
    <string name="consumed">0</string>
    <string name="net">1200</string>
    <string name="GoalCal">Goal</string>
    <string name="con">consumed</string>
    <string name="netCal">net</string>
    <string name="curWei">51.00 kg</string>
    <string name="goWei">45.00 kg</string>
    <string name="foodDiary">Food Diary</string>
    <string name="title_activity_add_food">AddFood</string>

    <!-- ADD food page -->
    <string name="add">ADD FOOD</string>

    <!--Dishes-->
    <string name="dishes">Dishes</string>
    <string name="pick_dish">Pick dish</string>
    <string name="dish_name">Dish name</string>
    <string name="calories_per_100_gm">Calories per 100 gm</string>
    <string name="enter_dish_weight">Enter weight</string>

    <string name="kilocalories">kcal</string>
    <string name="grams">gm</string>

    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="diary">Food</string>
    <string name="menu">Menu</string>
    <string name="previous_day">To previous day</string>
    <string name="next_day">To next day</string>
</resources>