<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        style="@style/header_style">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_dish"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:id="@+id/pick_dish_picked_dish_name"
            android:textColor="@color/my_text_color"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="0"
            android:inputType="number"
            android:onClick="onSetPickedDishWeight"
            android:textColor="@color/my_text_color"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/pick_dish_picked_dish_weight"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams"
            android:textColor="@color/my_text_color"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/pick_dish_list_ret">
    </ListView>

    <RelativeLayout
        android:layout_width="363dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="0.25"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/pick_dish_OK_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:contentDescription="@string/set"
            android:scaleType="centerInside"
            android:src="@drawable/ok_button" />

        <ImageButton
            android:id="@+id/pick_dish_cancel_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_toEndOf="@id/pick_dish_OK_button"
            android:layout_toRightOf="@id/pick_dish_OK_button"
            android:background="@null"
            android:contentDescription="@string/cancel"
            android:scaleType="centerInside"
            android:src="@drawable/cancel_button" />

        <ImageButton
            android:id="@+id/newDish_add_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="50dp"
            android:layout_toEndOf="@id/pick_dish_cancel_button"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/floating_btn" />

    </RelativeLayout>

</LinearLayout>
